refactor: add attribute syncing